   short option from ola_recorder that clashed.
 * Added a dummy responder which implements the draft E1.37-2 PIDs.

 API:
 * Added the ability to specify the priority of the DMX data in the C++ API -
   #266
 * Clean up of the C++ client API. deprecated ola::OlaCallbackClient.
 * Added a Version API.
 * Renamed DMXRecieved(sic) to DMXReceived in ola::Client

 RDM Tests:
 * Added more RDM responder tests to cover some slot related edge cases.
 * Log an error if we try and run an RDM test that doesn't exist.
 * Added the --inter-test-delay option
 * Added checks to the RDM tests to flag if non-printable characters are
   returned in any RDM strings - #262.
 * Fixed bugs in the MuteDevice, Fail & Startup mode tests.

 Bugs:
 * Build fixes for OS X 10.9 - #265.
 * Build fixes for FreeBSD 10.0-BETA3.
 * Fix the web and CLI UIs so they work if strings from RDM devices have
   unprintable characters in them - #263.
 * Fix a bug in the KiNet plugin - #276

 Internal:
 * Cleaned up the autotools configuration, `make distcheck` now works.
 * Cleaned up public header files.
 * Added configuration for Travis continuous integration.
 * Switched to using a custom generator for the C++ RPC Code.
 * Split PID data into 3 files.
 * Added more code documentation, cleaned up some new linter warnings.
 * Added the DISALLOW_COPY_AND_ASSIGN macro.
 * Refactor load average function out into system utils.
 * Switch the SPI RDM responders to using the core personality management code.
 * Renamed SetDecription(sic) to SetDescription in ola::Flags

Documentation:
 * Changed links from google code to github.
 * Added more doxygen comments.
 * Added more man pages.
 * Updated README, CONTRIBUTING and README.developer

22/10/2013 ola-0.8.33
 * Fix the build breakage when using XCode 5 (clang 500)
 * Save the SPI pixel count during shutdown
 * Fix E1.31 merge timeouts - #256
 * Fixed 2 bugs in the RDM responder tests.
 * Fix a bug where OLA wouldn't receive on ArtNet universe 0 - #260